HUE-5853 [oozie] Fix margins for the workflow title and z-index of draggable widgets

--- a/apps/oozie/src/oozie/static/oozie/less/workflow-editor.less
+++ b/apps/oozie/src/oozie/static/oozie/less/workflow-editor.less
@@ -21,6 +21,7 @@
   .draggable-widget, .draggable-icon {
     cursor: move;
     background-color: #FFF;
+    z-index: 100;
   }
 
   #emptyDashboard {
